Update my work list

--- a/en.html
+++ b/en.html
@@ -65,6 +65,7 @@
                 <li>Updated CI/CD processes of existing project from their own infrastructure to layer0.co, all-in-one Jamstack platform to develop, deploy, preview, split test and monitor your frontend. At the end the client can switching from layer0.co to their own environment and back in one click;</li>
                 <li>Optimized client's heavy React-based site. 80%&nbsp;of pages are green in&nbsp;Core&nbsp;Web&nbsp;Vitals stats;</li>
             </ul>
+            <p><small>Technologies: Next.js, <abbr title="React Storefront Framework, v.8">RSF8</abbr>, React, Typescript, Apollo GraphQL, JS</small></p>
         </section>
         <section>
             <header>
@@ -79,6 +80,7 @@
                 <li>Page-to-page transition is less then half-second on a phone with 4G;</li>
                 <li>After projects' launch conversion increased by 10-30% (depending on the project);</li>
             </ul>
+            <p><small>Technologies: <abbr title="React Storefront Framework, v.6">RSF6</abbr>, React, MobX, JS</small></p>
         </section>
         <section>
             <header>
