Update dates of work

--- a/en.html
+++ b/en.html
@@ -57,7 +57,7 @@
         <h2>Work Experience</h2><section>
             <header>
                 <h3>Senior Software Engineering Manager and Architect, Moovweb&nbsp;→&nbsp;MoovForge
-                <br /><small>2019—настоящее время</small></h3>
+                <br /><small>2019—present time</small></h3>
             </header>
             <p>Manage projects. Talk with clients. Lead people. Write code.</p>
             <p><strong>Achievements:</strong></p>
