--- a/en.html
+++ b/en.html
@@ -53,6 +53,8 @@
             <li>Experience in Agile and Scrum Processes</li>
             <li>Experience in People Management</li>
         </ul>
+        <h2>Latest Technologies</h2>
+        <p>React, Typescript, Next.js, Apollo GraphQL, MobX, JS, HTML, CSS</p>
 
         <h2>Work Experience</h2><section>
             <header>
