Update tech stack

--- a/en.html
+++ b/en.html
@@ -54,7 +54,7 @@
             <li>Experience in People Management</li>
         </ul>
         <h2>Latest Technologies</h2>
-        <p>React, Typescript, Next.js, Apollo GraphQL, MobX, JS, HTML, CSS</p>
+        <p>React, Typescript, Next.js, Apollo GraphQL, MobX, Material UI, JS, HTML, CSS</p>
 
         <h2>Work Experience</h2><section>
             <header>
