--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <p>Моё увлечение —&nbsp;дизайн, интерфейсы и&nbsp;взаимодействие с&nbsp;пользователями.</p>
 
-            <p>Знаю OOP, FRP, React, Vue, Angular, Flux, Redux, Mobx, Scrum, Kanban и&nbsp;прочие модные слова на&nbsp;острие технологий. Интересуюсь новинками веба и&nbsp;стараюсь их&nbsp;пощупать.</p>
+            <p>Знаю OOP, FRP, React, Vue, Angular, Flux, Redux, Mobx, Agile, Scrum, Kanban и&nbsp;прочие модные слова на&nbsp;острие технологий. Интересуюсь новинками веба и&nbsp;стараюсь их&nbsp;пощупать.</p>
 
             <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
