Update print version

--- a/en.html
+++ b/en.html
@@ -56,9 +56,11 @@
         <h2>Latest Technologies</h2>
         <p>React, Typescript, Next.js, Apollo GraphQL, MobX, Material UI, JS, HTML, CSS</p>
 
-        <h2>Work Experience</h2><section>
+
+        <h2>Work Experience</h2>
+        <section>
             <header>
-                <h3>Senior Software Engineering Manager and Architect, Moovweb&nbsp;→&nbsp;MoovForge
+                <h3>Senior Software Architect and Engineering Manager, Moovweb&nbsp;→&nbsp;MoovForge
                 <br /><small>2019—present time</small></h3>
             </header>
             <p>Manage projects. Talk with clients. Lead people. Write code.</p>
@@ -67,7 +69,6 @@
                 <li>Updated CI/CD processes of existing project from their own infrastructure to layer0.co, all-in-one Jamstack platform to develop, deploy, preview, split test and monitor your frontend. At the end the client can switching from layer0.co to their own environment and back in one click;</li>
                 <li>Optimized client's heavy React-based site. 80%&nbsp;of pages are green in&nbsp;Core&nbsp;Web&nbsp;Vitals stats;</li>
             </ul>
-            <p><small>Technologies: Next.js, <abbr title="React Storefront Framework, v.8">RSF8</abbr>, React, Typescript, Apollo GraphQL, JS</small></p>
         </section>
         <section>
             <header>
@@ -82,7 +83,6 @@
                 <li>Page-to-page transition is less then half-second on a phone with 4G;</li>
                 <li>After projects' launch conversion increased by 10-30% (depending on the project);</li>
             </ul>
-            <p><small>Technologies: <abbr title="React Storefront Framework, v.6">RSF6</abbr>, React, MobX, JS</small></p>
         </section>
         <section>
             <header>
@@ -91,7 +91,6 @@
             </header>
             <p>The Know-How is&nbsp;to&nbsp;hide slow and&nbsp;laggy original checkout process behind MoovCheckout solution. It&nbsp;improves UX and&nbsp;insrease conversion rate.</p>
             <p>Implement company's solution, optimised&nbsp;UI and&nbsp;UX in&nbsp;checkout processes on&nbsp;clients' sites.</p>
-            <p><small>Technologies: MoovJS Framework, JS, HTML, CSS</small></p>
         </section>
         <section>
             <header>
@@ -100,17 +99,11 @@
             </header>
             <dl>
                 <dt>WorkshopTab Wizard Interface Builder</dt>
-                <dd>Invented and&nbsp;made app that makes HTML prototypes of&nbsp;screens of&nbsp;real JAVA application and&nbsp;generates FXML-layouts. It&nbsp;helps developer team to&nbsp;communicate with managers and&nbsp;works faster.
-                    <br><small>Technologies: Harp.js, JS, HTML, CSS, FXML</small>
-                </dd>
+                <dd>Invented and&nbsp;made app that makes HTML prototypes of&nbsp;screens of&nbsp;real JAVA application and&nbsp;generates FXML-layouts. It&nbsp;helps developer team to&nbsp;communicate with managers and&nbsp;works faster.</dd>
                 <dt>DTCO Configurator</dt>
-                <dd>Made and prototyped UI of&nbsp;application that helps configure digital tachographs.
-                    <br><small>Technologies: Sketch, Flinto, Xamarin</small>
-                </dd>
+                <dd>Made and prototyped UI of&nbsp;application that helps configure digital tachographs.</dd>
                 <dt>NCF Event Calendar</dt>
-                <dd>Renovate UI&nbsp;system of&nbsp;web-app, built frontend part&nbsp;of&nbsp;service.
-                    <br><small>Technologies: Vue.js, HTML, CSS</small>
-                </dd>
+                <dd>Renovate UI&nbsp;system of&nbsp;web-app, built frontend part&nbsp;of&nbsp;service.</dd>
             </dl>
         </section>
         <section>
@@ -120,34 +113,35 @@
             </header>
             <dl>
                 <dt>Fartskriver SAFE APP</dt>
-                <dd>Made UI of mobile app, developed mobile app, developed frontend web-app.
-                    <br><small>Technologies: Sketch, Angular, HTML, CSS</small>
-                </dd>
+                <dd>Made UI of mobile app, developed mobile app, developed frontend web-app.</dd>
             </dl>
             <p>Made number of&nbsp;applications/prototypes/mockups based on&nbsp;JS frameworks or&nbsp;pure HTML+CSS+JS with&nbsp;backend on&nbsp;Ruby / Java</p>
         </section>
-        <section>
-            <header>
-                <h3>Frontend Developer / UX designer, razzom.com
-                    <br /><small>2012—2013</small></h3>
-            </header>
-            <p>Made frontend part of&nbsp;service, analyzed and&nbsp;improved UI&nbsp;solutions.</p>
-        </section>
-        <section>
-            <header>
-                <h3>Web Developer, Artais Web Studio
-                    <br /><small>2008—2013</small></h3>
-            </header>
-            <p>Developing the&nbsp;web-framework for&nbsp;typical sites based on&nbsp;company's CMS.</p>
-            <p>Made&nbsp;up over&nbsp;50&nbsp;sites using HTML5, CSS3 and&nbsp;JS.</p>
-        </section>
-        <section>
-            <header>
-                <h3>Frontend Web Developer / UX Designer, Freelance
-                    <br /><small>2005—2013</small></h3>
-            </header>
-            <p>Developed more than hundred sites using HTML, CSS and&nbsp;JS.</p>
-            <p>Had a&nbsp;few UI&nbsp;projects and&nbsp;a&nbsp;dozen of&nbsp;PHP&nbsp;projects.</p>
-        </section>
+        <details>
+            <summary>Previous experience</summary>
+            <section>
+                <header>
+                    <h3>Frontend Developer / UX designer, razzom.com
+                        <br /><small>2012—2013</small></h3>
+                </header>
+                <p>Made frontend part of&nbsp;service, analyzed and&nbsp;improved UI&nbsp;solutions.</p>
+            </section>
+            <section>
+                <header>
+                    <h3>Web Developer, Artais Web Studio
+                        <br /><small>2008—2013</small></h3>
+                </header>
+                <p>Developing the&nbsp;web-framework for&nbsp;typical sites based on&nbsp;company's CMS.</p>
+                <p>Made&nbsp;up over&nbsp;50&nbsp;sites using HTML5, CSS3 and&nbsp;JS.</p>
+            </section>
+            <section>
+                <header>
+                    <h3>Frontend Web Developer / UX Designer, Freelance
+                        <br /><small>2005—2013</small></h3>
+                </header>
+                <p>Developed more than hundred sites using HTML, CSS and&nbsp;JS.</p>
+                <p>Had a&nbsp;few UI&nbsp;projects and&nbsp;a&nbsp;dozen of&nbsp;PHP&nbsp;projects.</p>
+            </section>
+        </details>
     </body>
 </html>
