--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2>Работа</h2>
             <section>
                 <header>
-                    <h3>Senior Software Engineering Manager and Architect, Moovweb&nbsp;→&nbsp;MoovForge
+                    <h3>Senior Software Architect and Engineering Manager, Moovweb&nbsp;→&nbsp;MoovForge
                     <br /><small>2019—настоящее время</small></h3>
                 </header>
                 <p>Управляю&nbsp;проектами. Беседую с&nbsp;клиентами. Руковожу&nbsp;людьми. Пишу&nbsp;код.</p>
@@ -112,31 +112,34 @@
                     на&nbsp;основе JS-фреймворков или&nbsp;чистого HTML&nbsp;+&nbsp;CSS&nbsp;+&nbsp;JS
                     с&nbsp;бэкэндом на&nbsp;Ruby&nbsp;/&nbsp;Java.</p>
             </section>
-            <section>
-                <header>
-                    <h3>Фронтенд разработчик / Дизайнер интерфейсов, Razzom.Com
-                    <br /><small>2012—2013</small></h3>
-                </header>
-                <p>Верстал, анализировал и&nbsp;улучшал юзабилити пользовательской части сервиса.</p>
-            </section>
-            <section>
-                <header>
-                    <h3>Веб-разработчик, Artais&nbsp;Web&nbsp;Studio
-                    <br /><small>2008—2013</small></h3>
-                </header>
-                <p>Разработал систему правил и&nbsp;библиотеку элементов для&nbsp;типовых сайтов компании.</p>
-                <p>Сверстал более 50 сайтов, используя HTML5,&nbsp;CSS3 и&nbsp;JS.</p>
-            </section>
-            <section>
-                <header>
-                    <h3>Фронтенд разработчик / Дизайнер интерфейсов, Фриланс
-                    <br /><small>2005—2013</small></h3>
-                </header>
+            <details>
+                <summary>Предыдущий опыт работы</summary>
+                <section>
+                    <header>
+                        <h3>Фронтенд разработчик / Дизайнер интерфейсов, Razzom.Com
+                        <br /><small>2012—2013</small></h3>
+                    </header>
+                    <p>Верстал, анализировал и&nbsp;улучшал юзабилити пользовательской части сервиса.</p>
+                </section>
+                <section>
+                    <header>
+                        <h3>Веб-разработчик, Artais&nbsp;Web&nbsp;Studio
+                        <br /><small>2008—2013</small></h3>
+                    </header>
+                    <p>Разработал систему правил и&nbsp;библиотеку элементов для&nbsp;типовых сайтов компании.</p>
+                    <p>Сверстал более 50 сайтов, используя HTML5,&nbsp;CSS3 и&nbsp;JS.</p>
+                </section>
+                <section>
+                    <header>
+                        <h3>Фронтенд разработчик / Дизайнер интерфейсов, Фриланс
+                        <br /><small>2005—2013</small></h3>
+                    </header>
 
-                <p>Я&nbsp;разработал более ста сайтов на&nbsp;HTML, CSS и&nbsp;JS.</p>
-                <p>Создал интерфейсы для&nbsp;нескольких проектов.</p>
-                <p>Написал дюжину проектов на&nbsp;PHP.</p>
-            </section>
+                    <p>Я&nbsp;разработал более ста сайтов на&nbsp;HTML, CSS и&nbsp;JS.</p>
+                    <p>Создал интерфейсы для&nbsp;нескольких проектов.</p>
+                    <p>Написал дюжину проектов на&nbsp;PHP.</p>
+                </section>
+            </details>
 
             <h2>Сделал разные штуки</h2>
             <div class="row row-single">
