--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             <p>I am constantly striving to learn new technologies and look to ways to better myself in this rapidly changing industry.</p>
             <h2>Technical Skills</h2>
             <ul>
-                <li>Strong experience in PWA/SPA/Web App Development;</li>
+                <li>Strong experience in PWA/SPA/Front-End Development;</li>
                 <li>Strong Javascript knowledge;</li>
                 <li>Strong experience in Site SpeedUp and Accessibility;</li>
                 <li>Strong HTML & CSS knowledge;</li>
