--- a/safe-app.html
+++ b/safe-app.html
@@ -7,6 +7,10 @@
         <meta name="description" content="Приложение С-Е-Й-Ф заменяет бумажные формы проверки автомобиля, контролирует покупку бензина и ГСМ, помогает водителям оформить ДТП или несчастный случай для уведомления работодателя.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="prefetch" href="css/system-ui.css" as="style" />
+        <link rel="prefetch" href="css/typography.css" as="style" />
+        <link rel="preload" href="css/main.css" as="style" />
+
         <!-- Place favicon.ico in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
@@ -17,6 +21,7 @@
         <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
+        <link rel="stylesheet" href="css/system-ui.css">
         <link rel="stylesheet" href="css/typography.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
