--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Андрей Борисенко, веб-разработчик</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="alternate" hreflang="en" href="en.html" />
+
+        <link rel="prefetch" href="css/system-ui.css" as="style" />
+        <link rel="prefetch" href="css/typography.css" as="style" />
+        <link rel="preload" href="css/main.css" as="style" />
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
@@ -18,6 +22,7 @@
         <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
+        <link rel="stylesheet" href="css/system-ui.css">
         <link rel="stylesheet" href="css/typography.css">
         <link rel="stylesheet" href="css/main.css">
 
