--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </head>
     <body>
         <header class="mainpage-header">
-            <div class="mainpage-header__avatar"><img src="img/avatar.jpg" alt="Андрей Борисенко" /></div>
+            <div class="mainpage-header__avatar"><img src="img/avatar.jpg" width="100" height="100" alt="Андрей Борисенко" /></div>
             <h1>Андрей Борисенко</h1>
         </header>
 
