--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     <body>
         <section class="avoid-page-break">
             <header class="mainpage-header">
-                <div class="mainpage-header__avatar"><img src="img/avatar.jpg" alt="Андрей Борисенко" /></div>
+                <div class="mainpage-header__avatar"><img src="img/avatar.jpg" width="100" height="100" alt="Андрей Борисенко" /></div>
                 <div>
                     <h1>Andrew Borisenko</h1>
                     <p class="contacts">
