--- a/en.html
+++ b/en.html
@@ -36,7 +36,7 @@
     </head>
     <body>
         <header class="mainpage-header">
-            <div class="mainpage-header__avatar"><img src="img/avatar.jpg" alt="Андрей Борисенко" /></div>
+            <div class="mainpage-header__avatar"><img src="img/avatar.jpg" width="100" height="100" alt="Андрей Борисенко" /></div>
             <h1>Andrew Borisenko</h1>
         </header>
         <p class="contacts">
