--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Андрей Борисенко, веб-разработчик</title>
         <meta name="description" content="Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="alternate" hreflang="ru" href="index.html" />
         <link rel="alternate" hreflang="en" href="en.html" />
 
         <link rel="prefetch" href="css/system-ui.css" as="style" />
