--- a/en.html
+++ b/en.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Results-oriented professional with more than fifteen years experience in web development.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="alternate" hreflang="ru" href="index.html" />
+        <link rel="alternate" hreflang="en" href="en.html" />
 
         <link rel="prefetch" href="css/system-ui.css" as="style" />
         <link rel="prefetch" href="css/typography.css" as="style" />
