--- a/en.html
+++ b/en.html
@@ -6,8 +6,8 @@
         <title>Andrew Borisenko, Web Developer</title>
         <meta name="description" content="Results-oriented professional with more than fifteen years experience in web development.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="alternate" hreflang="ru" href="index.html" />
-        <link rel="alternate" hreflang="en" href="en.html" />
+        <link rel="alternate" hreflang="ru" href="https://seigiard.com" />
+        <link rel="alternate" hreflang="en" href="https://seigiard.com/en.html" />
 
         <link rel="prefetch" href="css/system-ui.css" as="style" />
         <link rel="prefetch" href="css/typography.css" as="style" />
